--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "scratch-render-fonts": "1.0.0-prerelease.20210401210003",
     "scratch-storage": "github:TurboWarp/scratch-storage#develop",
     "scratch-svg-renderer": "github:TurboWarp/scratch-svg-renderer#develop",
-    "scratch-vm": "github:TurboWarp/scratch-vm#develop",
+    "scratch-vm": "github:scratchforsccom/scratch-vm#develop",
     "startaudiocontext": "1.2.1",
     "style-loader": "^0.23.0",
     "text-encoding": "0.7.0",
